Working on irregular geometries.